@@ -51,15 +51,9 @@ see https://www.gnu.org/licenses/.  */
 #include <unistd.h>  /* for getpid, R_OK */
 #endif
 
-#if TIME_WITH_SYS_TIME
+#include <time.h>
+#if HAVE_SYS_TIME_H
 # include <sys/time.h>  /* for struct timeval */
-# include <time.h>
-#else
-# if HAVE_SYS_TIME_H
-#  include <sys/time.h>
-# else
-#  include <time.h>
-# endif
 #endif
 
 #if HAVE_SYS_RESOURCE_H
