@@ -1,3 +1,9 @@
+2023-08-21  FX Coudert  <fxcoudert@gmail.com>
+
+	* configure.ac: Drop AC_HEADER_STDC and AC_HEADER_TIME.
+	* configure.ac, tests/misc.c, tune/freq.c, tune/speed.c, tune/time.c:
+	Unconditionally include time.h.
+
 2023-08-19  Marc Glisse  <marc.glisse@inria.fr>
 
 	* doc/gmp.texi: Rename IEEE P754. Remove @refill.
